PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Valid/UniqueDataStructureName.pf
module UniqueDataStructureName {

    data Car {
        name String
        ps Int
    }

    data Person {
        name String
    }

    fun testSomething() : Int {
        i Int = 1
         
        return 1
    }
}