PureFun/PureFunOof/PureFun-fe/src/test/resources/cocos/Invalid/UniqueDataStructureName.pf
module UniqueDataStructureName {

    data Car {
        name String
    }

    data Car {
        ps Int
    }

    fun testSomething() : Int {
        i Int = 1
         
        return 1
    }
}